--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://api.fontshare.com/v2/css?f[]=satoshi@300,400&display=swap"
+      rel="stylesheet"
+    />
     <title>Vite + React + TS</title>
     <style>
       body {
         background-color: #16121a;
+        font-family: "Satoshi", sans-serif;
       }
     </style>
   </head>
