added app title in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://api.fontshare.com/v2/css?f[]=satoshi@300,400&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React + TS</title>
+    <title>Leemao Android</title>
     <style>
       body {
         background-color: #16121a;
