--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       body {
         background-color: #16121a;
         font-family: "Satoshi", sans-serif;
+        font-weight: 900;
       }
     </style>
   </head>
