--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <style>
       body {
         background-color: #16121a;
-        font-family: "Satoshi", sans-serif;
+        /* font-family: "Satoshi", sans-serif; */
         font-weight: 900;
       }
     </style>
